--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc -p tsconfig.prod.json",
+    "build:playground": "esbuild playground/playground.tsx --bundle --outfile=dist/playground.js --loader:.tsx=tsx --define:process.env.NODE_ENV='development'",
+    "start": "http-server . -c-1"
   },
   "keywords": [
     "console",
@@ -26,7 +28,9 @@
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
     "@typescript-eslint/parser": "^8.8.0",
+    "esbuild": "^0.24.0",
     "eslint": "^9.12.0",
+    "http-server": "^14.1.1",
     "react": "^18.3.1",
     "typescript": "^5.6.2"
   },
