--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,15 @@
 {
   "compilerOptions": {
-    "target": "es2016",
-    "module": "commonjs",
+    "target": "es6",
+    "module": "es6",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
     "jsx": "react",
     "outDir": "./dist",
-    "rootDir": "./src",
-    "declaration": true,
-    "declarationDir": "./dist"
+    "rootDir": "./playground"
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "dist", "src/playground"]
+  "include": ["playground/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
